--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql-extend-input",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Allowing Input to be extended",
   "main": "lib/main/index.js",
   "module": "lib/module/index.js",
@@ -18,12 +18,18 @@
   ],
   "author": "Daniel Meneses <pro.danielmeneses@gmail.com>",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/danielmeneses/graphql-extend-input/issues",
+    "email": "pro.danielmeneses@gmail.com"
+  },
+  "homepage": "https://github.com/danielmeneses/graphql-extend-input",
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.42",
     "@babel/core": "^7.0.0-beta.42",
     "@babel/plugin-transform-runtime": "^7.0.0-beta.42",
     "@babel/preset-env": "^7.0.0-beta.42",
     "@babel/runtime": "^7.0.0-beta.42",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "cross-env": "^5.1.4",
     "eslint": "^4.19.0",
     "eslint-plugin-prettier": "^2.6.0",
@@ -31,8 +37,12 @@
     "prettier": "1.11.1",
     "rimraf": "^2.6.2"
   },
-  "dependencies": {
-    "graphql": "^0.13.2"
+  "peerDependencies": {
+    "graphql": ">= 0.11.7"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/danielmeneses/graphql-extend-input.git"
   },
   "engines": {
     "node": ">=6.10"
