[MAJOR] added new multiple extend

--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
       "bracketSpacing": true,
       "jsxBracketSameLine": true,
       "semi": true
-    }]
+    }],
+    "no-useless-escape": "off"
   }
 }
