--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
     "@babel/preset-env": "^7.0.0-beta.42",
     "@babel/runtime": "^7.0.0-beta.42",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-es2015": "^6.24.1",
     "cross-env": "^5.1.4",
     "eslint": "^4.19.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
+    "graphql": "^0.13.2",
     "npm-run-all": "^4.1.2",
     "prettier": "1.11.1",
     "rimraf": "^2.6.2"
