--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@babel/plugin-transform-runtime": "^7.0.0-beta.42",
     "@babel/preset-env": "^7.0.0-beta.42",
     "@babel/preset-es2015": "^7.0.0-beta.42",
-    "@babel/runtime": "^7.0.0-beta.42",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.24.1",
     "cross-env": "^5.1.4",
@@ -40,6 +39,9 @@
     "npm-run-all": "^4.1.2",
     "prettier": "1.11.1",
     "rimraf": "^2.6.2"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.0.0-beta.42"
   },
   "peerDependencies": {
     "graphql": ">= 0.11.7"
